--- a/assets/global.css
+++ b/assets/global.css
@@ -30,6 +30,7 @@ body {
     font-size: 0.85rem;
     color: #4a4a4a;
     margin: 0;
+    background-color: #f3f3f3;
 }
 body > div {
     width: 100%;
@@ -78,4 +79,11 @@ a:hover {
     width: 100%;
     height: 3px;
     box-shadow: 0px 4px 10px #2d2c2c;
+    position: relative;
+}
+.svg-reyhoon-icon {
+    width: 135px;
+    display: block;
+    margin: auto;
+    padding-top: 4rem;
 }
