--- a/assets/global.css
+++ b/assets/global.css
@@ -244,16 +244,16 @@ a:hover {
 .best-res-item:hover .start-order-btn{
     background-color: rgba(212,0,98,.05)
 }
-.welcome {
+.page-title {
     padding: 4rem 0;
     margin-top: 6rem;
 }
-.form-layout {
+.form-div {
     width: 50%;
     margin: 3px auto;
 }
 
-.authentication-type {
+.authentication-div {
     height: 3.5rem;
     display: flex;
     background: white;
@@ -265,7 +265,7 @@ a:hover {
     top: 3.59rem;
     position: fixed;
 }
-.authentication-type div {
+.authentication-div div {
     padding: 0 .5rem;
     display: flex;
     justify-content: center;
@@ -273,7 +273,7 @@ a:hover {
     font-size: 14px;
     width: 6rem;
 }
-.authentication-type div i {
+.authentication-div div i {
     font-size: 1rem;
     margin-left: 7px;
 }
@@ -288,6 +288,6 @@ a:hover {
     background: #ddd;
     height: 1px;
 }
-.authentication-type a {
+.authentication-div a {
     color: #4a4a4a;
 }
