--- a/assets/login.css
+++ b/assets/login.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #eeeeee;
+    text-align: center;
+}
 .input-container {
     border: 1px solid white;
     border-radius: 5px;
@@ -9,9 +13,8 @@
     height: 3.5rem;
     text-align: center;
     background: white;
-    border-width: 0 0 1px;
-    border-style: solid;
-    border-color: #eee;
+    border: 0 solid #eee;
+    border-bottom-width: 1px;
     position: fixed;
     top: 0;
 }
@@ -19,24 +22,20 @@
     height: 2rem;
     margin-top: .65rem;
 }
-.authentication-login {
+.auth-login {
     color: #d40062;
     border-width: 0 0 2px;
     border-style: solid;
 }
-.authentication-register {
+.auth-reg {
     border: 0 solid white;
     border-bottom-width: 2px;
     color: #4a4a4a;
 }
-.authentication-register:hover {
+.auth-reg:hover {
     border-color: #d40062;
 }
-body {
-    background-color: #eeeeee;
-    text-align: center;
-}
-.form-layout > div {
+.form-div > div {
     display: inline-block;
     width: 100%;
     margin: 3px auto;
@@ -46,7 +45,7 @@ body {
     text-align: right;
     color: grey;
 }
-.form-layout > div > input {
+.form-div > div > input {
     display: inline-block;
     background: none;
     border: none;
@@ -54,7 +53,7 @@ body {
     font-size: 1rem;
     margin-right: 1rem;
 }
-.form-layout > a {
+.form-div > a {
     margin-top: 0.5rem;
     text-align: right;
     display: inline-block;
@@ -62,7 +61,7 @@ body {
     font-size: 0.8rem;
     color: steelblue;
 }
-.form-layout > button {
+.form-btn {
     display: inline-block;
     margin: 4rem;
     width: 12%;
@@ -73,29 +72,29 @@ body {
     font-size: 18px;
     color: white;
 }
-.footer-social {
+.footer .social {
     display: flex;
     justify-content: center;
 }
-.footer-social li {
+.footer .social li {
     width: 5px;
     height: 5px;
     display: inline-flex;
+    margin: .75rem;
+    padding: .75rem;
     justify-content: center;
     align-items: center;
     background: darkgrey;
     border-radius: 50%;
-    margin: .75rem;
-    padding: .75rem;
 }
-.footer-social li i {
+.footer .social li i {
     color: white;
 }
-.footer-options {
+.footer .options {
     display: flex;
     justify-content: center;
 }
-.footer-options li {
+.footer .options li {
     display: inline;
     margin: 1rem;
     color: darkgrey;
