--- a/client/src/assets/styles/rest_list.css
+++ b/client/src/assets/styles/rest_list.css
@@ -1,11 +1,6 @@
 #root {
     background-color: #fff;
 }
-.header-background-image {
-    width: 100%;
-    object-fit: cover;
-    height: 220px;
-}
 .header-bar {
     margin-bottom: 20px;
 }
@@ -141,9 +136,9 @@
 }
 .closed-restaurant-row .restaurant-small-item .res-shady-address:after {
     background: -webkit-gradient(linear,left top,right top,color-stop(30%,#fff),to(hsla(0,0%,100%,0)));
-    background: -webkit-linear-gradient(left,#f1f1f1 30%,hsla(0,0%,100%,0));
-    background: -o-linear-gradient(left,#f1f1f1 30%,hsla(0,0%,100%,0) 100%);
-    background: linear-gradient(90deg,#f1f1f1 30%,hsla(0,0%,100%,0));
+    background: -webkit-linear-gradient(left,#f1f1f1 20%,hsla(0,0%,100%,0));
+    background: -o-linear-gradient(left,#f1f1f1 20%,hsla(0,0%,100%,0) 100%);
+    background: linear-gradient(90deg,#f1f1f1 20%,hsla(0,0%,100%,0));
     transition: 0.25s;
     -webkit-transition: 0.25s;
 }
@@ -158,9 +153,9 @@
 }
 .closed-restaurant-row .restaurant-small-item:hover .res-shady-address:after {
     background: -webkit-gradient(linear,left top,right top,color-stop(30%,#fff),to(hsla(0,0%,100%,0)));
-    background: -webkit-linear-gradient(left,#f7f7f7 30%,hsla(0,0%,100%,0));
-    background: -o-linear-gradient(left,#f7f7f7 30%,hsla(0,0%,100%,0) 100%);
-    background: linear-gradient(90deg,#f7f7f7 30%,hsla(0,0%,100%,0));
+    background: -webkit-linear-gradient(left,#f7f7f7 20%,hsla(0,0%,100%,0));
+    background: -o-linear-gradient(left,#f7f7f7 20%,hsla(0,0%,100%,0) 100%);
+    background: linear-gradient(90deg,#f7f7f7 20%,hsla(0,0%,100%,0));
 }
 .filter-part {
     flex-grow: 1;
@@ -274,4 +269,9 @@
 }
 .selected-filter-list {
     border-bottom: 3px solid #d6d6d6;
+}
+.header-background-image {
+    width: 100%;
+    object-fit: cover;
+    height: 17vw;
 }
