--- a/client/src/assets/styles/rest_page.css
+++ b/client/src/assets/styles/rest_page.css
@@ -104,6 +104,13 @@
     -webkit-box-shadow: 0 0 17px #acacac;
 }
 
+.food-card-place {
+    margin: 0 2%;
+    width: 100%;
+    height: 20%;
+    padding: 0 2% 2%;
+}
+
 .food-card-details-container {
     text-align: right;
     margin-right: 4%;
@@ -142,6 +149,7 @@
 .food-materials {
     float: right;
     margin-top: -8px;
+    clear: both;
 }
 
 .add-cart-button-container {
@@ -237,7 +245,7 @@
     height: 45px;
     margin-top: 5px;
     border: none;
-    color: #ddd;
+    color: #343434;
     background: transparent;
     outline: none;
     padding-right: 5px;
@@ -311,6 +319,7 @@
 .time-header {
     float: right;
     margin-right: 10px;
+    font-weight: bold;
 }
 
 .time-container-part-two {
@@ -395,3 +404,10 @@
     top: 10px;
 }
 
+.food-type-title-container {
+    display: flex;
+}
+
+.tab-container-outer {
+    margin-top: 100px;
+}
