--- a/client/src/assets/styles/rest_page.css
+++ b/client/src/assets/styles/rest_page.css
@@ -38,11 +38,15 @@
     box-shadow: 1px 5px 30px rgba(0, 0, 0, 0.15);
     background-color: white;
     width: 100%;
-    height: 300px;
+    height: 19rem;
     border-radius: 5px;
     text-align: center;
     display: inline-block;
     padding-bottom: 19px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: -16rem;
+    z-index: 2;
 }
 .rest-card img {
     width: 80px;
@@ -310,7 +314,6 @@
 .time-container {
     width: 100%;
     display: flex;
-    border-bottom: solid 1px #ddd;
 }
 .time-container > div {
     width: 50%;
